testing/tests/ui/num-suffix.stderr
error: the previous template error derives from
 --> tests/ui/num-suffix.rs:7:5
  |
7 |     source = "{{ 0x0x }}",
  |     ^^^^^^

error: the previous template error derives from
  --> tests/ui/num-suffix.rs:14:5
   |
14 |     source = "{{ 0.0_f127 }}",
   |     ^^^^^^

error: the previous template error derives from
  --> tests/ui/num-suffix.rs:21:5
   |
21 |     source = "{{ 654u321 }}",
   |     ^^^^^^
